bug#47142 improving comments